# gelab-zero

./: README.md  chat.py  mcp_server_config.yaml  pyproject.toml  server.py  start_dashboard.bat  web_server.py
copilot_agent_client/: pu_client.py
copilot_agent_server/: local_server.py  local_server_logger.py
copilot_front_end/: package_map.py  pu_frontend_executor.py
examples/: run_single_task.py
frontend/: app.js  index.html  style.css
